--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@ um todo, ou seja, independente do tamanho da tela que será exibido.
 
 */
 /*Regras gerais*/
-body{
+body {
     font-family: 'Ubuntu', sans-serif;
     background-image: url(../imagem/hypnotize.png);
     background-attachment: fixed;
@@ -24,29 +24,34 @@ body{
     width: 100%;
 }
 
-h1, h2, h3, h4, p, figure{
+h1,
+h2,
+h3,
+h4,
+p,
+figure {
     margin: 0;
     padding: 0;
 }
 
-img{
+img {
     max-width: 100%;
 }
 
 /*Regras para o topo*/
-#topo{
+#topo {
     background-color: rgba(24, 56, 29, 0.9);
     border-bottom: solid 1px;
     text-align: center;
     margin-bottom: 15px;
 }
 
-h1 img{
+h1 img {
     margin-top: 5px;
     width: 200px;
 }
 
-nav{
+nav {
     min-height: 40px;
     display: flex;
     justify-content: center;
@@ -56,7 +61,9 @@ nav{
     line-height: 40px;
     padding-left: 1%;
 }
- nav a:link, nav a:visited{
+
+nav a:link,
+nav a:visited {
     text-decoration: none;
     color: white;
     transition: background-color 1s;
@@ -66,35 +73,144 @@ nav{
     justify-content: center;
     align-items: center;
     width: 23%;
- }
+}
 
- nav a:hover, nav a:focus{
+nav a:hover,
+nav a:focus {
     background-color: #A98E12;
     color: #000;
     transition: background-color 1s;
     border-radius: 5%;
- }
+}
 
- /*Regras do Rodapé*/
- .rodape{
+/*Regras do Rodapé*/
+.rodape {
     border-top: solid #06632E 5px;
     background-color: #000;
     color: #7F7F80;
     text-align: center;
     width: 100%;
- }
+}
 
- .rodape p{font-size: 14px;}
+.rodape p {
+    font-size: 14px;
+}
 
- .rodape aside{margin: 25px;}
+.rodape aside {
+    margin: 25px;
+}
 
- .rodape img {margin-left: 5px;margin-right: 5px;}
+.rodape img {
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
- .rodape-conteudo{
+.rodape-conteudo {
     display: flex;
     justify-content: center;
     align-content: center;
- }
+}
+
+.rodape-conteudo ul {
+    list-style: none;
+}
+
+#logo-rodape {
+    min-width: 146px;
+    width: 150px;
+    margin-top: 42px;
+    margin-left: 10px;
+}
+.menu-rodape a{
+    text-decoration: none;
+    color: #7F7F80;
+}
+.menu-rodape a:hover{
+    color: #fff;
+}
+.redes img{
+    min-width: 35px;
+    width: 35px;
+}
+.redes ul{
+    display: flex;
+    text-align: center;
+}
+
+.redes li{
+   width: 15%;
+   padding: 3%; 
+}
+.assinatura{
+    color: #fff;
+    background-color: #7F7F80;
+    text-align: center;
+    height: 50px;
+    padding: 1%;
+}
+
+.assinatura p{
+    padding-top: 3%;
+}
+
+/*Regra para a área de conteúdo principal.
+Definimos uma largura máxima um pouco menor do que a tela 
+toda e centralizamos com a margem em automático. */
+#conteudo{
+    max-width: 95%;
+    margin: auto;
+}
+
+#conteudo article{
+    background-color: white;
+    margin: 15px 0;
+    padding: 1%;
+    box-shadow: grey 1px 1px 5px;
+}
+#conteudo h2, #conteudo h3, #conteudo p{
+    padding: 1% 0;
+}
+
+.titulo{
+    font-size: 2em;
+    color: #ED6D19;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.destaque img{
+    border-bottom: dotted #ED6D19 5px;
+}
+
+.text-destaque{
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.8);
+    height: 80px;
+    bottom: 100px;
+    margin-top: 5px;
+    width: 100%;
+}
+
+.text-destaque h2 {
+    color: #000 !important;/* friza o efito aplicado, cancelando todos os outros.*/
+    margin-top: 5px;
+    padding: 5px 0 3px 50px;
+}
+.text-destaque p{
+    margin-top: 5px;
+    font-size: 1.1em;
+    padding: 0 0 5px 50px;
+}
+#frase{
+    color: #fff;
+    background-color: #ED6D19;
+    text-align: center;
+    height: 80px;
+}
+#frase p{
+    font-size: 1em;
+    padding: 12px;
+}
 
 
 
