--- a/css/estilo.css
+++ b/css/estilo.css
@@ -454,6 +454,73 @@ iframe {
     color: #fff;
 }
 
+
+        /* MODAL */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+          }
+          
+          /* Modal Content */
+          .modal-content {
+            position: relative;
+            background-color: #fefefe;
+            margin: auto;
+            padding: 5px;
+            border: 1px solid #888;
+            width: 80%;
+            text-align: center;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+            -webkit-animation-name: animatetop;
+            -webkit-animation-duration: 0.4s;
+            animation-name: animatetop;
+            animation-duration: 0.4s
+          }
+         
+          .close {
+            color: white;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+          }
+          
+          .close:hover,
+          .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+          }
+          
+          .modal-header {
+            padding: 2px 16px;
+            background-color: rgba(24, 56, 29, 0.9);
+            color: white;
+            text-align: center;
+          }
+          
+          .modal-body {padding: 5px 16px;}
+
+           /* Add Animation */
+           @-webkit-keyframes animatetop {
+            from {top:-300px; opacity:0} 
+            to {top:0; opacity:1}
+          }
+          
+          @keyframes animatetop {
+            from {top:-300px; opacity:0}
+            to {top:0; opacity:1}
+          }
+        
+
 /*Trabalhando com  as medias queries
 Regras com ajustes para a visualização do site/conteúdo em tamanhos de telas
 maiores (breackpoints)*/
@@ -625,5 +692,6 @@ instalar o js: https://jquery.com/download/ (botão direito salvar como..)
     }
 
 }
-
+     
+          
 /*só falta fazer o php contato..*/
